css/style.css
* {
    padding: 0;
    margin: 0;
}

body {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 1fr 5fr;
    font-family: 'Roboto', serif;
}

header {
    background-color: white;
    grid-column: 2 / 3;
    box-shadow: 0px 3px 5px #94a3b8;
    position: relative;
    z-index: 1;
    max-height: 200px;
    padding-left: 50px;
    padding-bottom: 8px;

    display: grid;
    grid-template-rows: 1fr 1fr;
}

header .top-row {
    grid-row: 1 / 2;

    display: grid;
    grid-template-columns: 2fr 1fr;
    place-items: center;
    justify-items: start;
}

header .top-row .search-bar {
    display: grid;
    grid-template-columns: 50px 1fr;
    place-items: center;
}

header .top-row input {
    width: 250px;
    height: 30px;
    background-color: #e2e8f0;
    border: none;
    border-radius: 15px;
    font-size: 1rem;
    padding-left: 10px;
}

header .top-row input:focus {
    outline: none;
}

header .top-row .profile {
    display: grid;
    grid-template-columns: 50px 50px 1fr;
    place-items: center;
    gap: 8px;
}

header .top-row .profile p {
    font-weight: bold;
    font-size: 1rem;
    padding-left: 10px;
}

header .bottom-row {
    grid-row: 2 / 3;

    display: grid;
    grid-template-columns: 1fr 1fr;
    place-items: center;
}

header .bottom-row .greeting {
    display: grid;
    grid-template-columns: 75px 1fr;
    place-items: center;
    justify-self: start;
    gap: 15px;
}

header .bottom-row .greeting p:first-of-type {
    font-weight: bold;
}

header .bottom-row .greeting p:last-of-type {
    font-weight: bold;
    font-size: 1.5rem;
}

header .bottom-row .buttons {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 15px;
}

header .bottom-row button {
    background-color: #119da4;
    padding: 10px;
    color: white;
    border-radius: 15px;
    border: none;
    width: 100px;
    font-size: 16px;
    font-weight: bold;
}

header .bottom-row button:hover {
    background-color: #0C7489;
    cursor: pointer;
}

nav {
    background-color: #0C7489;
    color: white;
    font-weight: bold;
    font-size: 1.1rem;

    grid-column: 1 / 2;
    grid-row: 1 / span 2;

    display: grid;
    grid-template-rows: 1fr 5fr 7fr;
    gap: 5px;
}

nav h1 {
    padding: 12px;

    display: grid;
    grid-template-columns: 35px 1fr;
    align-items: center;
}

nav ul {
    padding: 12px;
}

nav ul li {
    list-style-type: none;
    margin: 10px 0;

    display: grid;
    grid-template-columns: 35px 1fr;
    align-items: center;
}

nav ul li a:link {
    text-decoration: none;
    color: white;
}

nav ul li a:visited {
    text-decoration: none;
    color: white;
}

nav ul li a:hover {
    font-size: 1.2rem;
    color: white;

}

nav ul li a:focus {
    text-decoration: none;
    color: white;
}

nav ul li a:active {
    text-decoration: none;
    color: white;
}

main {
    background-color: #e2e8f0;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 30px 20px 0px 20px;
}

main h2 {
    margin: 10px;
}

main p {
    color: #555555;
}

main #announcements, #trending p {
    font-size: 1rem;
}

main #projects {
    grid-column: 1 / 2;
    grid-row: 1 / span 2;
}

main #projects h3 {
    margin-bottom: 10px;
}

main #projects .cards {
    display: grid;
    margin: 10px;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 10px;

    font-size: 1.1rem;
}

main #projects .project {
    background-color: white;
    height: 180px;
    border-left: 5px solid #119da4;
    border-radius: 5px;
    padding: 30px;
    box-shadow: 2px 3px 3px #94a3b8;

    display: grid;
    grid-template-rows: 1fr 1fr;
}

main #projects .project-icons {
    justify-self: end;
    align-self: end;
}

main #announcements h4 {
    margin-bottom: 5px;
}

main #announcements .content {
    background-color: white;
    padding: 20px;
    margin: 10px;
    border-radius: 5px;
    box-shadow: 2px 3px 3px #94a3b8;

    display: grid;
    grid-template-rows: repeat(3. 1fr);
    gap: 5px;
}

main #announcements .content div {
    padding: 5px;
}

main #announcements .content div:nth-child(-n+2) {
    border-bottom: 1px solid #94a3b8;
    padding: 5px 5px 10px 5px;
}

main #trending .trending-content {
    background-color: white;
    padding: 10px;
    margin: 10px;
    border-radius: 5px;

    display: grid;
    grid-template-rows: repeat(4, 1fr);
    gap: 5px;
    box-shadow: 2px 3px 3px #94a3b8;
}

#trending .people {
    padding: 5px;

    display: grid;
    grid-template-columns: 50px 1fr;
    gap: 8px;
}

/*Icons*/

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 1,
  'wght' 400,
  'GRAD' 0,
  'opsz' 48
}

.no-fill {
  font-variation-settings:
  'FILL' 0 
}

/*Avatars*/

.avatar {
    height: calc(300px / 6);
    width: calc(300px / 6);
    background-image: url(../img/avatar_sprite.jpg);
    background-size: calc(1200px / 5) calc(1200px / 5);
    border-radius: 50%;
}

.avatar-large {
    height: calc(300px / 4);
    width: calc(300px / 4);
    background-image: url(../img/avatar_sprite.jpg);
    background-size: calc(1200px / 3) calc(1200px / 3);
    border-radius: 50%;   
}

.morgan-large {
    background-position: -17px -10px;
}

.morgan {
    background-position: -7px -3px;
}

.tegan {
    background-position: -7px -177px;
}

.kendall {
    background-position: -7px -120px;
}

.alex {
    background-position: -7px -62px;
}

